--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/home.css">
 
     <!-- Java Script -->
-    <script src="javascript/shop.js" async></script>
+    <script src="javascript/shop.js" type="module" async></script>
 
 </head>
 
