--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/home.css">
 
     <!-- Java Script -->
-    <script src="javascript/home.js" async></script>
+    <script src="javascript/home.js" type = "module" async></script>
 
 </head>
 
