--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/home.css">
 
     <!-- Java Script -->
-    <script src="javascript/home.js" type = "module" async></script>
+    <script src="javascript/home.js" async></script>
 
 </head>
 
@@ -119,62 +119,9 @@
             <hr class="mx-auto">
             <p>A brief overview of our new <span>Pottery</span> with reasonable prices on <span>Dwell Inside</span>.</p>
         </div>
-        <div class="row mx-auto container-fluid">
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/pottery/1.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Greenish Pottery</h5>
-                <h4 class="p-price">$7.19</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
 
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/pottery/2.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Golden Plates</h5>
-                <h4 class="p-price">$6.32</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
-
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/pottery/3.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Mixed Pottery Set</h5>
-                <h4 class="p-price">$11.73</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
-
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/pottery/4.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Coffee Mug</h5>
-                <h4 class="p-price">$3.38</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
+        <div class="row mx-auto container-fluid pottery">
+            <!-- Items To Be Generated -->
         </div>
     </section>
 
@@ -186,62 +133,9 @@
             <p>A brief overview of our new <span>Souvenirs</span> with reasonable prices on <span>Dwell Inside</span>.
             </p>
         </div>
-        <div class="row mx-auto container-fluid">
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/souvenirs/1.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Ornamental Tree</h5>
-                <h4 class="p-price">$1.54</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
 
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/souvenirs/2.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Matroska Presidents</h5>
-                <h4 class="p-price">$2.34</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
-
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/souvenirs/3.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Swinging Angel</h5>
-                <h4 class="p-price">$1.13</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
-
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/souvenirs/4.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Miniature Car</h5>
-                <h4 class="p-price">$1.98</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
+        <div class="row mx-auto container-fluid souvenir">
+            <!-- Items To Be Generated -->
         </div>
     </section>
 
@@ -252,62 +146,9 @@
             <hr class="mx-auto">
             <p>A brief overview of our new <span>Candles</span> with reasonable prices on <span>Dwell Inside</span>.</p>
         </div>
-        <div class="row mx-auto container-fluid">
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/candles/1.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Night Candles</h5>
-                <h4 class="p-price">$8.38</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
 
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/candles/2.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Ornamental Candles</h5>
-                <h4 class="p-price">$6.82</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
-
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/candles/3.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Scented Candles</h5>
-                <h4 class="p-price">$4.11</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
-
-            <div class="product text-center col-lg-3 col-md-4 col-12">
-                <img class="img-fluid mb-3" src="images/items/candles/4.jpg" alt="error">
-                <div class="star">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <h5 class="p-name">Simple Candles</h5>
-                <h4 class="p-price">$2.74</h4>
-                <button onclick="window.location.href='shop.html'" class="buy-btn">Buy Now</button>
-            </div>
+        <div class="row mx-auto container-fluid candle">
+            <!-- Items To Be Generated -->
         </div>
     </section>
     <!-- Section End -->
@@ -325,13 +166,12 @@
             <div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
                 <h5 class="pb-2">Featured</h5>
                 <ul class="text-uppercase list-unstyled">
-                    <li><a href="#">men</a></li>
-                    <li><a href="#">women</a></li>
-                    <li><a href="#">boys</a></li>
-                    <li><a href="#">girls</a></li>
-                    <li><a href="#">new arrivals</a></li>
-                    <li><a href="#">shoes</a></li>
-                    <li><a href="#">clothes</a></li>
+                    <li><a href="#">presentation</a></li>
+                    <li><a href="#">featured</a></li>
+                    <li><a href="#">discount</a></li>
+                    <li><a href="#">pottery</a></li>
+                    <li><a href="#">souvenirs</a></li>
+                    <li><a href="#">candles</a></li>
                 </ul>
             </div>
 
